# CSCD70

Assignment1-Introduction_to_LLVM/FunctionInfo/: CMakeLists.txt
Assignment1-Introduction_to_LLVM/FunctionInfo/lib/: FunctionInfo.cpp
Assignment1-Introduction_to_LLVM/FunctionInfo/test/: CMakeLists.txt
Assignment1-Introduction_to_LLVM/LocalOpts/: CMakeLists.txt
Assignment1-Introduction_to_LLVM/LocalOpts/lib/: 1-AlgebraicIdentity.cpp  2-StrengthReduction.cpp  3-MultiInstOpt.cpp
Assignment1-Introduction_to_LLVM/LocalOpts/test/: CMakeLists.txt
Assignment2-Dataflow_Analysis/: CMakeLists.txt
Assignment2-Dataflow_Analysis/include/DFA/: MeetOp.h
Assignment2-Dataflow_Analysis/include/DFA/Domain/: Base.h  Expression.h  VariableForInterval.h
Assignment2-Dataflow_Analysis/include/DFA/Flow/: ForwardAnalysis.h  Framework.h
Assignment2-Dataflow_Analysis/lib/: 5-IntegerRange.cpp  CMakeLists.txt  DFA.cpp  DFA.h
Assignment2-Dataflow_Analysis/lib/DFA/Domain/: Variable.cpp  VariableForInterval.cpp
Assignment2-Dataflow_Analysis/test/: CMakeLists.txt
Tutorial02-Introduction_to_LLVM_ii/Example1-Transform_Pass_Example/: CMakeLists.txt
Tutorial02-Introduction_to_LLVM_ii/Example1-Transform_Pass_Example/test/: CMakeLists.txt
Tutorial02-Introduction_to_LLVM_ii/Example2-Pass_Manager/: CMakeLists.txt
